plugins {
	id 'org.springframework.boot' version '2.5.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'org.springframework.experimental.aot' version '0.10.0-SNAPSHOT'
	id "nebula.release" version "15.3.1"
	id "com.palantir.docker" version "0.26.0"
	id "com.avast.gradle.docker-compose" version "0.14.3"
}

group = 'com.code4unb'
sourceCompatibility = '11.0.11'

repositories {
	maven { url 'https://repo.spring.io/snapshot' }
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.projectlombok:lombok:1.18.18'
    compileOnly 'org.projectlombok:lombok:1.18.18'
	annotationProcessor 'org.projectlombok:lombok:1.18.18'
	implementation 'com.linecorp.bot:line-bot-api-client:4.3.0'
	implementation 'com.linecorp.bot:line-bot-model:4.3.0'
	implementation 'com.linecorp.bot:line-bot-spring-boot:4.3.0'
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

jar {
	enabled = false
}

test {
	useJUnitPlatform()
}

bootBuildImage {
	builder = 'paketobuildpacks/builder:tiny'
	environment = ['BP_NATIVE_IMAGE': 'true']
}

dockerCompose{
	useComposeFiles = ['docker-compose-app.yml']
	upAdditionalArgs = ['--build']
	environment.put 'JAR_FILE',"${bootJar.getArchiveFileName().get()}"
}

docker{
	name project.getProperties().getOrDefault("imageName",project.name.toLowerCase()).toString()
	files(bootJar.archiveFile.get())
	buildArgs(['JAR_FILE': "${bootJar.getArchiveFileName().get()}"])
	noCache true
}

springBoot {
	buildInfo()
}
